Fixed vertical scrollbar for grid

--- a/themes/rois/scss/base.scss
+++ b/themes/rois/scss/base.scss
@@ -62,9 +62,3 @@ ul {
         padding: 0.5rem 0;
     }
 }
-
-@media (max-width: 1200px) {
-    body {
-        margin-top: 0;
-    }
-}
