--- a/themes/rois/scss/layout.scss
+++ b/themes/rois/scss/layout.scss
@@ -35,7 +35,6 @@ p {
 
 .main {
     min-height: 32rem;
-    overflow: auto;
 }
 
 .site-footer {
